[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/CorruptedBot.gd" type="Script" id=1]
[ext_resource path="res://Sprites/corrupted_bot.png" type="Texture2D" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 12 )

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "shockwave_charge",
"speed": 2.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "shockwave",
"speed": 15.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "scan",
"speed": 4.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "repair",
"speed": 6.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "death",
"speed": 5.0
} ]

[node name="CorruptedBot" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2( 0.09375, 0.09375 )
frames = SubResource( 3 )
animation = "idle"
modulate = Color( 0.8, 0.8, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="GroundCheck" type="RayCast2D" parent="."]
enabled = true
position = Vector2( 15, 0 )
target_position = Vector2( 0, 20 )
collision_mask = 4

[node name="WallCheck" type="RayCast2D" parent="."]
enabled = true
target_position = Vector2( 20, 0 )
collision_mask = 4

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 1 )

[node name="HealthBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -15.0
offset_top = -25.0
offset_right = 15.0
offset_bottom = -20.0
value = 100.0
tint_progress = Color( 1, 0.2, 0.2, 1 )

[node name="AlertIndicator" type="Label" parent="."]
visible = false
offset_left = -10.0
offset_top = -35.0
offset_right = 10.0
offset_bottom = -25.0
text = "!"
align = 1
valign = 1
theme_override_colors/font_color = Color( 1, 0.2, 0.2, 1 ) 